@@ -57,7 +57,7 @@ class ux_tx_openid_sv1 extends tx_openid_sv1 {
 		$this->loginData = $loginData;
 		$this->authenticationInformation = $authenticationInformation;
 
-		// Implement normalization according to OpenID 2.0 specification
+			// Implement normalization according to OpenID 2.0 specification
 		$this->openIDIdentifier = $this->normalizeOpenID($this->loginData['uname']);
 
 		// If we are here after authentication by the OpenID server, get its response.
@@ -162,6 +162,37 @@ class ux_tx_openid_sv1 extends tx_openid_sv1 {
 		}
 
 		return $result;
+	}
+
+	/**
+	 * Gets user record for the user with the OpenID provided by the user
+	 *
+	 * @param	string		$openIDIdentifier	OpenID identifier to search for
+	 * @return	array		Database fields from the table that corresponds to the current login mode (FE/BE)
+	 */
+	protected function getUserRecord($openIDIdentifier) {
+		$record = NULL;
+		if ($openIDIdentifier) {
+				// $openIDIdentifier always as a trailing slash because it got normalized
+				// but tx_openid_openid possibly not so check for both alternatives in database
+			$record = $GLOBALS['TYPO3_DB']->exec_SELECTgetSingleRow('*',
+				$this->authenticationInformation['db_user']['table'],
+				'tx_openid_openid IN (' .
+					$GLOBALS['TYPO3_DB']->fullQuoteStr($openIDIdentifier, $this->authenticationInformation['db_user']['table']) .
+					',' . $GLOBALS['TYPO3_DB']->fullQuoteStr(rtrim($openIDIdentifier, '/'), $this->authenticationInformation['db_user']['table']) .
+					')' .
+					$this->authenticationInformation['db_user']['check_pid_clause'] .
+					$this->authenticationInformation['db_user']['enable_clause']);
+			if ($record) {
+					// Make sure to work only with normalized OpenID during the whole process
+				$record['tx_openid_openid'] = $this->normalizeOpenID($record['tx_openid_openid']);
+			}
+		} else {
+			// This should never happen and generally means hack attempt.
+			// We just log it and do not return any records.
+			$this->writeLog('getUserRecord is called with the empty OpenID');
+		}
+		return $record;
 	}
 
 	/**
@@ -316,7 +347,7 @@ class ux_tx_openid_sv1 extends tx_openid_sv1 {
 			// An empty path component is normalized to a slash
 			// (e.g. "http://domain.org" -> "http://domain.org/")
 		if (preg_match('#^https?://[^/]+$#', $openIDIdentifier)) {
-			$openIDIdentifier.= '/';
+			$openIDIdentifier .= '/';
 		}
 
 		return $openIDIdentifier;
