@@ -1,3 +1,7 @@
+2012-03-04  Xavier Perseguers  <xavier@causal.ch>
+
+	* [BUGFIX] OpenID login fails if trailing slash is missing (synchro from TYPO3)
+
 2012-02-24  Xavier Perseguers  <xavier@causal.ch>
 
 	* [BUGFIX] Admin flag is not synchronized
